--- a/app/src/main/res/drawable/knap_baggrund.xml
+++ b/app/src/main/res/drawable/knap_baggrund.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="100dp"
+        android:radius="20dp"
         />
     <solid
-        android:color="#8BC53E"
+        android:color="#D6E2D5"
         />
     <padding
         android:left="0dp"
