--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".deltagerDagsordenActivity"
     tools:layout_editor_absoluteY="81dp">
 
@@ -25,29 +26,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/tilbageLederBtn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="51dp"
-        android:background="@drawable/knap_baggrund"
-        android:text="Tilbage"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/feedbackBtn"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
-
-    <Button
         android:id="@+id/feedbackBtn"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="154dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="112dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/knap_baggrund"
         android:text="Start feedback"
-        app:layout_constraintBottom_toBottomOf="@+id/tilbageLederBtn"
+        android:textAlignment="center"
+        android:textColor="FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tilbageLederBtn"
-        app:layout_constraintTop_toTopOf="@+id/tilbageLederBtn" />
+        app:layout_constraintHorizontal_bias="0.972"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.977" />
 
 
     <ScrollView
@@ -90,12 +85,6 @@
 
             <TextView
                 android:id="@+id/textView16"
-                android:layout_width="match_parent"
-                android:layout_height="67dp"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="67dp"
                 android:textSize="24sp" />
