--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#616F6C</color>
-    <color name="colorPrimaryDark">#3F4F50</color>
+    <color name="colorPrimary">#EEEEEE</color>
+    <color name="colorPrimaryDark">#3A3A3A</color>
     <color name="colorAccent">#6AAA6A</color>
 </resources>
