--- a/app/src/main/res/layout/activity_moede_oprettet.xml
+++ b/app/src/main/res/layout/activity_moede_oprettet.xml
@@ -36,14 +36,15 @@
         app:layout_constraintVertical_bias="0.399" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/forsideBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="138dp"
-        android:layout_marginEnd="148dp"
         android:layout_marginStart="148dp"
         android:layout_marginTop="73dp"
-        android:text="Button"
+        android:layout_marginEnd="148dp"
+        android:layout_marginBottom="138dp"
+        android:text="@string/forsideBtn"
+        android:background="@drawable/knap_baggrund"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
