--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DFE0E0"
     tools:context=".deltagerDagsordenActivity"
     tools:layout_editor_absoluteY="81dp">
 
@@ -27,10 +28,9 @@
     <Button
         android:id="@+id/feedbackBtn"
         android:layout_width="363dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="69dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
         android:text="Start feedback"
         android:textColor="@android:color/background_light"
