--- a/app/src/main/res/layout/activity_moede_oprettet.xml
+++ b/app/src/main/res/layout/activity_moede_oprettet.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".MoedeOprettet">
 
     <TextView
         android:id="@+id/mødeOprettet"
-        android:layout_width="231dp"
-        android:layout_height="0dp"
+        android:layout_width="250dp"
+        android:layout_height="94dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="113dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
-        android:text="Tillykke mødet er nu oprettet"
+        android:text="Tillykke! \n Dit møde er nu oprettet"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,15 +25,15 @@
         android:id="@+id/mødeIdTekst"
         android:layout_width="202dp"
         android:layout_height="77dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.399" />
+        app:layout_constraintVertical_bias="0.38" />
 
     <Button
         android:id="@+id/forsideBtn"
@@ -43,8 +43,9 @@
         android:layout_marginTop="73dp"
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="138dp"
-        android:text="@string/forsideBtn"
         android:background="@drawable/knap_baggrund"
+        android:text="@string/forsideBtn"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
