--- a/app/src/main/res/layout/activity_slut.xml
+++ b/app/src/main/res/layout/activity_slut.xml
@@ -34,6 +34,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
         android:text="@string/forsideBtn"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
