--- a/app/src/main/res/layout/activity_leder_opret_moede.xml
+++ b/app/src/main/res/layout/activity_leder_opret_moede.xml
@@ -60,7 +60,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="52dp"
 
-        android:background="@drawable/add_btn"
+        android:background="@drawable/addtryk"
         app:layout_constraintBottom_toTopOf="@+id/opretmødeBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button4"
@@ -73,7 +73,7 @@
         android:layout_marginEnd="128dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/slet"
+        android:background="@drawable/minustryk"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
