--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="#DFE0E0"
-    tools:context=".MainActivity">
+    tools:context=".Fragment.MainActivity">
 
 
     <android.support.design.widget.AppBarLayout
